force-app/main/default/objects/Related_MultiSelect__c/Related_MultiSelect__c.object-meta.xml
<CustomObject>
    <label>Related MultiSelect</label>
    <nameField>
        <label>Related MultiSelect Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Related MultiSelect</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>