force-app/main/default/objects/Related_MultiSelect__c/fields/Invoice_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Line Item</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Related MultiSelect</relationshipLabel>
    <relationshipName>Related_MultiSelect</relationshipName>
    <type>Lookup</type>
</CustomField>